--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,16 +1,49 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.zjwtnt_demo.main.MainActivity" >
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
-
+<?xml version="1.0" encoding="utf-8"?>  
+<RelativeLayout   
+  xmlns:android="http://schemas.android.com/apk/res/android"  
+  xmlns:tools="http://schemas.android.com/tools"  
+  android:id="@+id/container"  
+  android:layout_width="match_parent"  
+  android:layout_height="match_parent" >  
+  
+  <!-- Header aligned to top -->  
+    <com.zjwtnt_demo.views.TitleView  
+        android:id="@+id/header"  
+        android:layout_width="match_parent"  
+        android:layout_height="wrap_content" >  
+    </com.zjwtnt_demo.views.TitleView>  
+  
+  <!-- Footer aligned to bottom -->  
+  <RelativeLayout  
+    android:id="@+id/footer"  
+    android:layout_width="match_parent"  
+    android:layout_height="wrap_content"  
+    android:layout_alignParentBottom="true"  
+    android:background="#6AED83"  
+    android:gravity="center">  
+  
+    <TextView  
+      android:layout_width="wrap_content"  
+      android:layout_height="wrap_content"  
+      android:layout_margin="5dp"  
+      android:text="Footer"  
+      android:textColor="#000000"  
+      android:textSize="20sp" />  
+  </RelativeLayout>  
+  
+  <!-- Content below header and above footer -->  
+  <RelativeLayout  
+    android:layout_width="fill_parent"  
+    android:layout_height="fill_parent"  
+    android:layout_above="@id/footer"  
+    android:layout_below="@id/header"  
+    android:gravity="center">  
+  
+    <TextView  
+      android:layout_width="wrap_content"  
+      android:layout_height="wrap_content"  
+      android:text="Content goes here"  
+      android:textColor="#FFFFFF"  
+      android:textSize="20sp" />  
+  </RelativeLayout>  
 </RelativeLayout>
