--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -39,11 +39,11 @@
     android:layout_below="@id/header"  
     android:gravity="center">  
   
-    <TextView  
-      android:layout_width="wrap_content"  
-      android:layout_height="wrap_content"  
-      android:text="Content goes here"  
-      android:textColor="#FFFFFF"  
-      android:textSize="20sp" />  
+  
+     <ListView android:layout_width="wrap_content"     
+                  android:layout_height="wrap_content"     
+                  android:id="@+id/MyListView">    
+     </ListView>         
+      
   </RelativeLayout>  
 </RelativeLayout>
