--- a/res/layout/index_pic_list.xml
+++ b/res/layout/index_pic_list.xml
@@ -25,7 +25,7 @@
            android:layout_height="wrap_content"       
            android:layout_width="fill_parent" 
            android:layout_toRightOf="@+id/thumb"   
-            android:textSize="20dip"
+           android:textSize="20dip"
        />
        
        <TextView       
@@ -33,7 +33,7 @@
                android:layout_height="wrap_content"       
                android:layout_width="fill_parent"       
                android:id="@+id/content"   
-               android:layout_toRightOf="@+id/itemImage"   
+               android:layout_toRightOf="@+id/thumb"   
                android:layout_below="@+id/title">      
          </TextView>      
 </RelativeLayout>
