--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -40,6 +40,16 @@
     android:gravity="center">  
   
   
+      
+        <TextView  
+      android:layout_width="wrap_content"  
+      android:layout_height="wrap_content"  
+      android:layout_margin="5dp"  
+      android:text="ggggggggggggggg"  
+      android:textColor="#ffffff"  
+      android:textSize="20sp"
+      android:id="@+id/textview1"
+       />  
      <ListView android:layout_width="wrap_content"     
                   android:layout_height="wrap_content"     
                   android:id="@+id/MyListView">    
