--- a/res/layout/activity_view_news.xml
+++ b/res/layout/activity_view_news.xml
@@ -42,7 +42,8 @@
     android:layout_below="@id/header"  
     android:gravity="center"
     android:orientation="vertical"
-    >  
+    >
+
   
   <TextView 
       android:id="@+id/title"
@@ -52,18 +53,14 @@
      android:textColor="#0000ff"  
      android:layout_weight="9"
       >
-   </TextView>   
-      <TextView
-      android:id="@+id/content"
-      android:layout_width="wrap_content"
-      android:layout_height="fill_parent"
-      android:layout_weight="1"
-      android:text="down"
-      android:textColor="#ff0000"  
-      >  
-  </TextView>
+   </TextView>
       
     
+      <WebView
+          android:id="@+id/wv_content"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:layout_weight="1" />
           
       
   </LinearLayout>     
