--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -32,20 +32,44 @@
   </RelativeLayout>  
   
   <!-- Content below header and above footer -->  
+  
+
+  
+
+
   <RelativeLayout  
     android:layout_width="fill_parent"  
     android:layout_height="fill_parent"  
-    android:layout_above="@id/footer"  
     android:layout_below="@id/header"  
-    android:gravity="center">  
-  
-  
-      
-    
-     <ListView android:layout_width="wrap_content"     
-                  android:layout_height="wrap_content"     
-                  android:id="@+id/MyListView">    
-     </ListView>         
+    android:layout_above="@id/footer"     
+    android:gravity="center"
+    android:id="@+id/main_content"
+    >  
+
+	
+	  
+ 
+	  		  <Gallery 
+				android:id="@+id/gallery" 
+				android:layout_width="fill_parent"
+				android:layout_height="150dp"
+				android:spacing="10px"
+				android:layout_alignParentTop="true"
+				android:layout_alignParentLeft="true"				
+				
+			/> 
+ 
+     <ListView
+         android:id="@+id/MyListView"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_below="@id/gallery" 
+        android:layout_marginTop="10dp"
+ 
+         
+         >
+     </ListView>
+ 
       
   </RelativeLayout>  
 </RelativeLayout>
